max-height and max-width on App to avoid scrollbar issues

--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,9 @@
   --xxlarge: 130px;
   color: rbg(var(--main-color));
   font-family: 'Fredoka One';
-  height: calc(100vh - 20px);
+  max-height: calc(100vh - 20px);
   padding: 10px;
-  width: calc(100vw - 20px);
+  max-width: calc(100vw - 20px);
 }
 
 @media only screen and (min-width: 500px) {
